# personal-email-agent

./: .envrc.example  .gitignore  CLAUDE.md  README.md  RISKS.md  config.yaml  pyproject.toml
email_agent/: classifier.py  db.py  drafter.py  gmail_client.py  models.py  notifier.py
